# agent-runner

./: .env.example  .env.template  .gitignore  README.md  WEBHOOKS.md  config.yaml.example  pyproject.toml
examples/: LINEAR_MCP_WEBHOOK_SETUP.md  basic_usage.py  service_mode.py  webhook_routes_claude_assignee.yaml  webhook_routes_linear.yaml  with_bedrock.py  with_slack.py  with_sub_agents.py
prompts/: code_review.md  database_health_check.md  log_analyzer.md
src/claude_agent_framework/: __init__.py  cli.py
src/claude_agent_framework/agents/: __init__.py  templates.py
src/claude_agent_framework/config/: __init__.py  settings.py
src/claude_agent_framework/core/: __init__.py  engine.py  result.py  runner.py
src/claude_agent_framework/mcp/: __init__.py  helpers.py
src/claude_agent_framework/notifications/: __init__.py  slack.py
src/claude_agent_framework/tracking/: __init__.py  cost_tracker.py  logger.py
src/claude_agent_framework/tui/: __init__.py  app.py
src/claude_agent_framework/utils/: __init__.py  helpers.py
src/claude_agent_framework/webhook/: __init__.py  handlers.py  linear.py  models.py  server.py
